k8s-resource-manifests/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: prometheus
  namespace: sodalite-services
spec:
  ports:
  - name: prometheus
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app: prometheus
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
